--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>홈페이지연습</title>
+  <title>작업공간</title>
   <!--css 링크-->
   <link href="css/header.css" rel="stylesheet">
   <link href="css/contact.css" rel="stylesheet">
