--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
     <div class="wrap">
       <div></div>
       <div>
-        <p><a href="home.html">home</a></p>
+        <p><a href="index.html">home</a></p>
         <p class="on"><a href="aboutme.html">about me</a></p>
         <p><a href="contact.html">contact</a></p>
       </div>
